--- a/about.html
+++ b/about.html
@@ -89,8 +89,8 @@
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bi bi-card-checklist"></i></div>
-              <h4 class="title"><a href="">Teaching Interests</a></h4>
-              <p class="description">Classes I have taught include Consumer Behavior, Marketing Research and Analysis, Web and Digital Ad Analytics, and Digital Advertising. My teaching philosophy is centered around providing students with both theory and hands-on experience in the latest marketing trends and technologies. I strive to provide a positive and supportive learning environment in the classroom. Relevant marketing technologies I teach include Google Analytics, Google Tag Manager, Google Data Studio, Google Search and Display Ads, Tableau, JASP, HTML/CSS, and Qualtrics.</p>
+              <h4 class="title"><a href="">Professional Interests</a></h4>
+              <p class="description">When it comes to my work I always look for ways to grow. It has only been a few months since I got a job as a Social Media Brand Marketer. Going into this I knew how to work with a team, how effective communication and clear objectives were. However, I didn't know much about Adobe and Social Media Branding. Now though I can say that I can add knowing photo/video editing, pushing social media posts, and graphic design editing to my skills.</p>
             </div>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
