--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="icon"><i class="bi bi-binoculars"></i></div>
               <h4 class="title"><a href="">More About Me</a></h4>
-              <p class="description">I have a lovely family! My wife Noemi and my two kids Daniella and Gabriel keep me busy on most weekends and weekday evenings. What have I been into lately? I play some chess (pporly) on Chess.com, ride my bike on the Poudre River Trail, am trying to learn some French, and am getting back into playing Magic the Gathering.</p>
+              <p class="description">Something most people don't know is that I like to write stories or poems on my time off. I find it relaxing and theraputic. I also have a failed Youtube gaming channel. I hope one day to travel around the world and see the original seven wonders of the world.</p>
             </div>
 
           </div>
