--- a/blog.html
+++ b/blog.html
@@ -99,7 +99,7 @@
         <div class="card">
           <h2>About Me</h2>
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/daniel-img.jpg?raw=true" class="blogimg" style="height:300px;">
-          <p>I am an Associate Professor of Marketing at the University of Northern Colorado. Thoughts are my own.</p>
+          <p>I am a student of the University of Northern Coloardo for the School of Monfort. These are some good places to eat.</p>
         </div>
         <div class="card">
           <h3>Follow Me</h3>
