Updated link on line 89 in blog

--- a/blog.html
+++ b/blog.html
@@ -79,7 +79,7 @@
           <h2>Top 5 Recommended Places to Eat in Colorado</h2>
           <h5>These places to eat offer a variety to the taste of Colorful Colorado,</h5>
           <p style="font-size:25px"> 1. Dae Gee Korean BBQ</p>
-          <p><a href="https://www.amazon.com/Contagious-Things-Catch-Jonah-Berger/dp/1451686587">
+          <p><a href="https://www.daegee.com/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/contagious-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 2. Rincon Argentino</p>
           <p> <a href="https://www.amazon.com/Dont-Make-Think-Revisited-Usability/dp/0321965515/">
