--- a/blog.html
+++ b/blog.html
@@ -82,7 +82,7 @@
           <p><a href="https://www.daegee.com/">
           <img src = "https://github.com/Jonas18297/simplesite/blob/main/assets/img/DaeGeeKBBQ.jpeg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 2. Rincon Argentino</p>
-          <p> <a href="https://www.amazon.com/Dont-Make-Think-Revisited-Usability/dp/0321965515/">
+          <p> <a href="https://www.rinconargentinoboulder.com/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/think-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 3. Wholly Stromboli</p>
           <p><a href="https://www.amazon.com/Influence-Psychology-Persuasion-Robert-Cialdini/dp/006124189X/">
