Updated img link on line 86 in blog

--- a/blog.html
+++ b/blog.html
@@ -83,7 +83,7 @@
           <img src = "https://github.com/Jonas18297/simplesite/blob/main/assets/img/DaeGeeKBBQ.jpeg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 2. Rincon Argentino</p>
           <p> <a href="https://www.rinconargentinoboulder.com/">
-          <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/think-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
+          <img src = "https://github.com/Jonas18297/simplesite/blob/main/assets/img/Rincon-Argentino-Storefront-2.jpeg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 3. Wholly Stromboli</p>
           <p><a href="https://www.amazon.com/Influence-Psychology-Persuasion-Robert-Cialdini/dp/006124189X/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/influence-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
