--- a/blog.html
+++ b/blog.html
@@ -85,7 +85,7 @@
           <p> <a href="https://www.rinconargentinoboulder.com/">
           <img src = "https://github.com/Jonas18297/simplesite/blob/main/assets/img/Rincon-Argentino-Storefront-2.jpeg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 3. Wholly Stromboli</p>
-          <p><a href="https://www.amazon.com/Influence-Psychology-Persuasion-Robert-Cialdini/dp/006124189X/">
+          <p><a href="http://www.whollystromboli.com/new/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/influence-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 4. Rodizio Grill</p>
           <p><a href="https://www.amazon.com/Predictably-Irrational-1-Exp-Rev/dp/B0076YEIFQ/">
