--- a/blog.html
+++ b/blog.html
@@ -88,7 +88,7 @@
           <p><a href="http://www.whollystromboli.com/new/">
           <img src = "https://github.com/Jonas18297/simplesite/blob/main/assets/img/Wholly-Stromboli.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 4. Rodizio Grill</p>
-          <p><a href="https://www.amazon.com/Predictably-Irrational-1-Exp-Rev/dp/B0076YEIFQ/">
+          <p><a href="https://www.rodiziogrill.com/denver/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/irrational-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 5. Flavor of India</p>
           <p><a href="https://www.amazon.com/Nudge-Final-Richard-H-Thaler/dp/014313700X/">
