--- a/blog.html
+++ b/blog.html
@@ -89,7 +89,7 @@
           <img src = "https://github.com/Jonas18297/simplesite/blob/main/assets/img/Wholly-Stromboli.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 4. Rodizio Grill</p>
           <p><a href="https://www.rodiziogrill.com/denver/">
-          <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/irrational-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
+          <img src = "https://github.com/Jonas18297/simplesite/blob/main/assets/img/RodizioGrill.jpeg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 5. Flavor of India</p>
           <p><a href="https://www.amazon.com/Nudge-Final-Richard-H-Thaler/dp/014313700X/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/nudge-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
