--- a/blog.html
+++ b/blog.html
@@ -91,7 +91,7 @@
           <p><a href="https://www.rodiziogrill.com/denver/">
           <img src = "https://github.com/Jonas18297/simplesite/blob/main/assets/img/RodizioGrill.jpeg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 5. Flavor of India</p>
-          <p><a href="https://www.amazon.com/Nudge-Final-Richard-H-Thaler/dp/014313700X/">
+          <p><a href="http://flavorofindiacolorado.com/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/nudge-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
         </div>
       </div>
