--- a/blog.html
+++ b/blog.html
@@ -92,7 +92,7 @@
           <img src = "https://github.com/Jonas18297/simplesite/blob/main/assets/img/RodizioGrill.jpeg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 5. Flavor of India</p>
           <p><a href="http://flavorofindiacolorado.com/">
-          <img src = "https:/github.com/Jonas18297/simplesite/blob/main/assets/img/Flavor-of-India.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
+          <img src = "https://github.com/Jonas18297/simplesite/blob/main/assets/img/Flavor-of-India.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
         </div>
       </div>
       <div class="rightcolumn">
