--- a/video.html
+++ b/video.html
@@ -77,7 +77,7 @@
           </div>
           <div class="container" data-aos="fade-up">
             <iframe width="420" height="315"
-            src="https://youtu.be/Vv5mDNjFR1A">
+            src="https://www.youtube.com/watch?v=Vv5mDNjFR1A">
             </iframe>
           </div>
         </div>
